--- a/index.html
+++ b/index.html
@@ -9,6 +9,70 @@
     <script src="Notice.js"></script>
 </head>
 <body>
-    
+        <div class="Home">
+            <div class="Header">
+                <div class="Menu">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="profile.html">Profile</a></li>
+                        <li><a href="connect.html">Connect</a></li>
+                        <li><a href="about.html">About</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="Content">
+                <h2>Home</h2>
+                
+                <div class="content1">
+                    <div class="img-content1">
+                        <img src="Img/image-content1.png" alt="">
+                    </div>
+                    <div class="Write">
+                        <div class="Write1">
+                            <h3>Sở thích</h3>
+                        </div>
+                        <div class="noidung">
+                            <p>Sở thích......</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="content2">
+                    <div class="img-content2">
+                        <img src="Img/img-content2.jpg" alt="">
+                    </div>
+                    <div class="Write">
+                        <div class="Write1">
+                            <h3>Công nghệ thông tin</h3>
+                        </div>
+                        <div class="noidung">
+                            <p>Công nghệ......</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="content3">
+                    <div class="img-content3">
+                        <img src="Img/img-content3.jpg" alt="">
+                    </div>
+                    <div class="Write">
+                        <div class="Write1">
+                            <h3>Kế hoạch</h3>
+                        </div>
+                        <div class="noidung">
+                            <p>Kế hoạch......</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div title="Đây là Footer"  class="Footer">
+                <h2>Footer</h2>
+                <div class="Banquyen"> 
+                    <h4>Bản quyền ..... </h4>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
